adds vcr gem and two tests for scraper.

--- a/test/fixtures/critics.yml
+++ b/test/fixtures/critics.yml
@@ -3,11 +3,11 @@
 one:
   first_name: MyString
   last_name: MyString
-  publications: 
+  publication: 
   active: false
 
 two:
   first_name: MyString
   last_name: MyString
-  publications: 
+  publication: 
   active: false
