adds api calls for movies and reviews

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -687,3 +687,52 @@
 ...
 --- http://www.metacritic.com/movie/livresse-du-pouvoir
 ...
+--- http://www.metacritic.com/movie/maryland-disorder
+...
+--- http://www.metacritic.com/movie/dont-breathe/critic-reviews
+...
+--- http://www.metacritic.com/movie/dont-come-knocking/critic-reviews
+...
+--- http://www.metacritic.com/movie/dont-go-in-the-woods/critic-reviews
+...
+--- http://www.metacritic.com/movie/down-by-love/critic-reviews
+...
+--- http://www.metacritic.com/movie/down-the-shore/critic-reviews
+...
+--- http://www.metacritic.com/movie/the-lorax
+...
+--- http://www.metacritic.com/movie/zoom-2016/critic-reviews
+...
+--- http://www.metacritic.com/movie/et-the-extra-terrestrial-re-release
+...
+--- http://www.metacritic.com/movie/youth-in-revolt/critic-reviews
+...
+--- http://www.metacritic.com/movie/yi-yi-a-one-and-a-two
+...
+--- http://www.metacritic.com/movie/frantic-re-release
+...
+--- http://www.metacritic.com/movie/yakuza-apocalypse-the-great-war-of-the-underworld
+...
+--- http://www.metacritic.com/movie/wrath-of-the-titans
+...
+--- http://www.metacritic.com/movie/women-on-the-verge-of-a-nervous-breakdown/critic-reviews
+...
+--- http://www.metacritic.com/movie/the-legend-of-the-leaf-men
+...
+--- http://www.metacritic.com/movie/the-tomb
+...
+--- http://www.metacritic.com/movie/eves-bayou/critic-reviews
+...
+--- http://www.metacritic.com/movie/wind-chill/critic-reviews
+...
+--- http://www.metacritic.com/movie/wild-grass/critic-reviews
+...
+--- http://www.metacritic.com/movie/who-the--is-jackson-pollock/critic-reviews
+...
+--- "/movie/whiteout"
+--- http://www.metacritic.com/movie/daughter-of-god
+...
+--- http://www.metacritic.com/movie/white-rabbit/critic-reviews
+...
+--- http://www.metacritic.com/movie/extinction/critic-reviews
+...
