adds javascript to create top match on the page dynamically as you review movies. the basic review structure is working.

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -804,3 +804,14 @@
 ...
 --- http://www.metacritic.com/movie/the-woman-in-black-angel-of-death
 ...
+--- http://www.metacritic.com/movie/hellboy/critic-reviews
+...
+--- http://www.metacritic.com/movie/hercules-the-thracian-wars
+...
+--- "/movie/the-wackness"
+--- http://www.metacritic.com/movie/the-vessel/critic-reviews
+...
+--- http://www.metacritic.com/movie/high-art/critic-reviews
+...
+--- http://www.metacritic.com/movie/the-very-thought-of-you/critic-reviews
+...
