adds database exported to data yaml, adds cron job.

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: critic-match_production
-  username: critic-match
+  username: nickdamiano
   password: <%= ENV['CRITIC-MATCH_DATABASE_PASSWORD'] %>
