--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -486,3 +486,30 @@
 --- "/movie/mubarakan"
 --- "/movie/the-chinese-lives-of-uli-sigg"
 --- "/movie/tulip-fever"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- http://www.metacritic.com/movie/captain-underpants
+...
+--- "/movie/captain-underpants"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
+--- "/movie/open-water-3-cage-dive"
+--- "/movie/toilet-ek-prem-katha"
+--- "/movie/the-veil"
+--- http://www.metacritic.com/movie/battleship-island
+...
+--- "/movie/battleship-island"
+--- "/movie/jab-harry-met-sejal"
+--- "/movie/30-years-of-garbage-the-garbage-pail-kids-story"
+--- http://www.metacritic.com/movie/an-inconvenient-sequel
+...
+--- "/movie/an-inconvenient-sequel"
+--- "/movie/the-irregular-at-magic-high-school-the-movie-the-girl-who-calls-the-stars"
