--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -513,3 +513,48 @@
 ...
 --- "/movie/an-inconvenient-sequel"
 --- "/movie/the-irregular-at-magic-high-school-the-movie-the-girl-who-calls-the-stars"
+--- "/movie/911"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/captain-underpants
+...
+--- "/movie/captain-underpants"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
+--- "/movie/open-water-3-cage-dive"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/captain-underpants
+...
+--- "/movie/captain-underpants"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
+--- "/movie/open-water-3-cage-dive"
