fixes null names i think

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -602,3 +602,57 @@
 --- "/movie/catastropico"
 --- "/movie/a-life-in-waves"
 --- "/movie/open-water-3-cage-dive"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
