updates title css

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -656,3 +656,113 @@
 --- "/movie/mune-guardian-of-the-moon"
 --- "/movie/catastropico"
 --- "/movie/a-life-in-waves"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/fairy-tail-dragon-cry"
+--- "/movie/mune-guardian-of-the-moon"
+--- "/movie/catastropico"
+--- "/movie/a-life-in-waves"
+--- "/movie/because-of-gracia"
+--- "/movie/vengeance-a-love-story"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/because-of-gracia"
+--- "/movie/vengeance-a-love-story"
+--- "/movie/lane-1974"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/because-of-gracia"
+--- "/movie/extraordinary-ordinary-people"
+--- http://www.metacritic.com/movie/time-to-die
+...
+--- "/movie/time-to-die"
+--- "/movie/lane-1974"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/because-of-gracia"
+--- "/movie/extraordinary-ordinary-people"
+--- http://www.metacritic.com/movie/time-to-die
+...
+--- "/movie/time-to-die"
+--- "/movie/lane-1974"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
+--- "/movie/because-of-gracia"
+--- http://www.metacritic.com/movie/time-to-die
+...
+--- "/movie/time-to-die"
+--- "/movie/lane-1974"
+--- "/movie/memoir-of-a-murderer"
+--- "/movie/paradise-club"
+--- "/movie/poster-boys"
+--- http://www.metacritic.com/movie/in-loco-parentis
+...
+--- "/movie/in-loco-parentis"
+--- http://www.metacritic.com/movie/white-sun
+...
+--- "/movie/white-sun"
+--- "/movie/a-gentleman"
+--- http://www.metacritic.com/movie/la-vida-inmoral-de-la-pareja-ideal
+...
+--- "/movie/la-vida-inmoral-de-la-pareja-ideal"
+--- "/movie/bareilly-ki-barfi"
