fixes scrape url for recent image.

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -766,3 +766,7 @@
 ...
 --- "/movie/la-vida-inmoral-de-la-pareja-ideal"
 --- "/movie/bareilly-ki-barfi"
+--- http://www.metacritic.com/movie/boo-2!-a-madea-halloween
+...
+--- "/movie/boo-2!-a-madea-halloween"
+--- "/movie/pokemon-the-movie-i-choose-you!"
