fixes mobile so it's two movies per line, removes padding from top critics, makes title smaller

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -770,3 +770,19 @@
 ...
 --- "/movie/boo-2!-a-madea-halloween"
 --- "/movie/pokemon-the-movie-i-choose-you!"
+--- "/movie/singularity-2017"
+--- "/movie/keep-watching"
+--- "/movie/the-heyday-of-the-insensitive-bastards"
+--- "/movie/splitting-image"
+--- http://www.metacritic.com/movie/120-beats-per-minute
+...
+--- "/movie/120-beats-per-minute"
+--- "/movie/rv-resurrected-victims"
+--- "/movie/secret-superstar"
+--- http://www.metacritic.com/movie/6-below
+...
+--- "/movie/6-below"
+--- "/movie/gnome-alone"
+--- http://www.metacritic.com/movie/goodbye-christoper-robin
+...
+--- "/movie/goodbye-christoper-robin"
