scrape recent now working.

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -993,3 +993,32 @@
 --- http://www.metacritic.com/movie/oceans-eight
 --- http://www.metacritic.com/movie/out-1
 --- http://www.metacritic.com/movie/the-friend-2019
+--- http://www.metacritic.com/movie/oh-boy
+--- http://www.metacritic.com/movie/bardo
+--- "/movie/bardo"
+--- http://www.metacritic.com/movie/bardo/critic-reviews
+--- "/movie/bardo/critic-reviews"
+--- http://www.metacritic.com/movie/bardo
+--- "/movie/bardo"
+--- http://www.metacritic.com/movie/bardo/critic-reviews
+--- "/movie/bardo/critic-reviews"
+--- http://www.metacritic.com/movie/bardo/user-reviews
+--- "/movie/bardo/user-reviews"
+--- http://www.metacritic.com/movie/bardo
+--- "/movie/bardo"
+--- http://www.metacritic.com/movie/bardo/critic-reviews
+--- "/movie/bardo/critic-reviews"
+--- http://www.metacritic.com/movie/bardo
+--- "/movie/bardo"
+--- http://www.metacritic.com/movie/bardo/critic-reviews
+--- "/movie/bardo/critic-reviews"
+--- http://www.metacritic.com/movie/bardo/user-reviews
+--- "/movie/bardo/user-reviews"
+--- http://www.metacritic.com/movie/bardo/critic-reviews
+--- "/movie/bardo/critic-reviews"
+--- http://www.metacritic.com/movie/bardo/critic-reviews
+--- "/movie/bardo/critic-reviews"
+--- http://www.metacritic.com/movie/bardo
+--- "/movie/bardo"
+--- http://www.metacritic.com/movie/bardo
+--- "/movie/bardo"
