before deleting vcr cassettes

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -1022,3 +1022,19 @@
 --- "/movie/bardo"
 --- http://www.metacritic.com/movie/bardo
 --- "/movie/bardo"
+--- http://www.metacritic.com/movie/slayers
+--- "/movie/slayers"
+--- http://www.metacritic.com/movie/wendell-and-wild
+--- "/movie/wendell-and-wild"
+--- http://www.metacritic.com/movie/the-accursed-2022
+--- "/movie/the-accursed-2022"
+--- http://www.metacritic.com/movie/all-jacked-up-and-full-of-worms
+--- "/movie/all-jacked-up-and-full-of-worms"
+--- http://www.metacritic.com/movie/white-bird-a-wonder-story
+--- "/movie/white-bird-a-wonder-story"
+--- http://www.metacritic.com/movie/black-glasses
+--- "/movie/black-glasses"
+--- http://www.metacritic.com/movie/operation-seawolf
+--- "/movie/operation-seawolf"
+--- http://www.metacritic.com/movie/oh-boy
+--- http://www.metacritic.com/movie/oh-boy
