now returning the against the grain top and bottom but introduces bug where new page takes 8 seconds to finish loading and clicking a review button doesn't do anything during that time.

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -1064,3 +1064,5 @@
 --- http://www.metacritic.com/movie/oh-boy
 --- http://www.metacritic.com/movie/oh-boy
 --- http://www.metacritic.com/movie/oh-boy
+--- http://www.metacritic.com/movie/broadway-rising
+--- "/movie/broadway-rising"
