fixes bug for nil movie ids on saving sometimes. adds top 5 movies for critic on critic page.

--- a/failed_movie_scrapes.yml
+++ b/failed_movie_scrapes.yml
@@ -1066,3 +1066,37 @@
 --- http://www.metacritic.com/movie/oh-boy
 --- http://www.metacritic.com/movie/broadway-rising
 --- "/movie/broadway-rising"
+--- http://www.metacritic.com/movie/my-father-muhammad-ali
+--- "/movie/my-father-muhammad-ali"
+--- http://www.metacritic.com/movie/landlocked
+--- "/movie/landlocked"
+--- http://www.metacritic.com/movie/the-22nd-annual-animation-show-of-shows
+--- "/movie/the-22nd-annual-animation-show-of-shows"
+--- http://www.metacritic.com/movie/i-wanna-dance-with-somebody
+--- "/movie/i-wanna-dance-with-somebody"
+--- http://www.metacritic.com/movie/the-good-maharaja
+--- "/movie/the-good-maharaja"
+--- http://www.metacritic.com/movie/avatar-2
+--- "/movie/avatar-2"
+--- http://www.metacritic.com/movie/black-warrant
+--- "/movie/black-warrant"
+--- http://www.metacritic.com/movie/detective-knight-redemption
+--- "/movie/detective-knight-redemption"
+--- http://www.metacritic.com/movie/matilda-the-musical
+--- "/movie/matilda-the-musical"
+--- http://www.metacritic.com/movie/bruiser
+--- "/movie/bruiser"
+--- http://www.metacritic.com/movie/savage-salvation
+--- "/movie/savage-salvation"
+--- http://www.metacritic.com/movie/canterbury-glass
+--- http://www.metacritic.com/movie/the-moon-and-the-sun
+--- http://www.metacritic.com/movie/tr
+--- http://www.metacritic.com/movie/the-cow
+--- http://www.metacritic.com/movie/levcnement
+--- http://www.metacritic.com/movie/the-devils-light
+--- http://www.metacritic.com/movie/serre-moi-fort
+--- http://www.metacritic.com/movie/canterbury-glass
+--- http://www.metacritic.com/movie/canterbury-glass
+--- http://www.metacritic.com/movie/the-moon-and-the-sun
+--- http://www.metacritic.com/movie/canterbury-glass
+--- http://www.metacritic.com/movie/canterbury-glass
