--- a/movies_list.yml
+++ b/movies_list.yml
@@ -1,1 +1,195 @@
---- []
+---
+- "/movie/canterbury-glass"
+- "/movie/apples"
+- "/movie/armageddon-time"
+- "/movie/asking-for-it"
+- "/movie/attack-on-finland"
+- "/movie/bandit"
+- "/movie/barbarians"
+- "/movie/beast-2022"
+- "/movie/big-gold-brick"
+- "/movie/black-adam"
+- "/movie/blacklight"
+- "/movie/bloody-oranges"
+- "/movie/bodies-bodies-bodies"
+- "/movie/both-sides-of-the-blade"
+- "/movie/breaking"
+- "/movie/breaking-bread"
+- "/movie/brighton-4th"
+- "/movie/bros"
+- "/movie/bullet-train"
+- "/movie/burial"
+- "/movie/butter-2022"
+- "/movie/crazy"
+- "/movie/call-jane"
+- "/movie/carmen"
+- "/movie/catch-the-fair-one"
+- "/movie/clean-2022"
+- "/movie/clerks-iii-2022"
+- "/movie/cordelia"
+- "/movie/cow"
+- "/movie/crimes-of-the-future"
+- "/movie/dashcam"
+- "/movie/dc-league-of-super-pets"
+- "/movie/dead-for-a-dollar"
+- "/movie/death-on-the-nile"
+- "/movie/decision-to-leave"
+- "/movie/doctor-strange-in-the-multiverse-of-madness"
+- "/movie/dog"
+- "/movie/dont-worry-darling"
+- "/movie/downton-abbey-a-new-era"
+- "/movie/dual"
+- "/movie/easter-sunday"
+- "/movie/elvis"
+- "/movie/emergency-declaration"
+- "/movie/emily-the-criminal"
+- "/movie/escape-the-field"
+- "/movie/everything-everywhere-all-at-once"
+- "/movie/fabian-going-to-the-dogs"
+- "/movie/facing-nolan"
+- "/movie/fall-2022"
+- "/movie/family-squares"
+- "/movie/fantastic-beasts-the-secrets-of-dumbledore"
+- "/movie/father-stu"
+- "/movie/fiddlers-journey-to-the-big-screen"
+- "/movie/firestarter-2022"
+- "/movie/flux-gourmet"
+- "/movie/futura"
+- "/movie/gagarine"
+- "/movie/george-michael-freedom-uncut"
+- "/movie/gigi-nate"
+- "/movie/girl-picture"
+- "/movie/gold-2022"
+- "/movie/the-cow"
+- "/movie/hallelujah-leonard-cohen-a-journey-a-song"
+- "/movie/halloween-ends"
+- "/movie/levcnement"
+- "/movie/hatching"
+- "/movie/hello-bookstore"
+- "/movie/hit-the-road"
+- "/movie/serre-moi-fort"
+- "/movie/hold-your-fire"
+- "/movie/honk-for-jesus-save-your-soul"
+- "/movie/hudas-salon"
+- "/movie/i-love-my-dad"
+- "/movie/indemnity"
+- "/movie/infinite-storm"
+- "/movie/jackass-forever"
+- "/movie/jurassic-world-dominion"
+- "/movie/king-knight"
+- "/movie/last-looks"
+- "/movie/lightyear-2022"
+- "/movie/lost-illusions"
+- "/movie/loving-highsmith"
+- "/movie/lowndes-county-and-the-road-to-black-power"
+- "/movie/lunana-a-yak-in-the-classroom"
+- "/movie/lyle-lyle-crocodile"
+- "/movie/mack-rita"
+- "/movie/marcel-the-shell-with-shoes-on"
+- "/movie/marry-me"
+- "/movie/marvelous-and-the-black-hole"
+- "/movie/medieval"
+- "/movie/medusa-2021"
+- "/movie/memories-of-my-father"
+- "/movie/memory-2022"
+- "/movie/men"
+- "/movie/minamata"
+- "/movie/minions-the-rise-of-gru"
+- "/movie/miracle-2022"
+- "/movie/monstrous"
+- "/movie/montana-story"
+- "/movie/moon-66-questions"
+- "/movie/moonage-daydream"
+- "/movie/moonfall"
+- "/movie/morbius"
+- "/movie/mr-malcolms-list"
+- "/movie/mrs-harris-goes-to-paris"
+- "/movie/murder-at-yellowstone-city"
+- "/movie/my-donkey-my-lover-i"
+- "/movie/neptune-frost"
+- "/movie/nitram"
+- "/movie/nope"
+- "/movie/official-competition"
+- "/movie/offseason"
+- "/movie/old-man"
+- "/movie/olga"
+- "/movie/one-way"
+- "/movie/orphan-first-kill"
+- "/movie/paradise-city"
+- "/movie/paradise-highway"
+- "/movie/paris-13th-district"
+- "/movie/paws-of-fury-the-legend-of-hank"
+- "/movie/pearl-2022"
+- "/movie/peter-von-kant"
+- "/movie/petrovs-flu"
+- "/movie/piggy"
+- "/movie/plan-a"
+- "/movie/playground"
+- "/movie/playlist"
+- "/movie/poker-face"
+- "/movie/the-devils-light"
+- "/movie/queen-of-glory"
+- "/movie/redeeming-love"
+- "/movie/resurrection"
+- "/movie/rifkins-festival"
+- "/movie/riotsville-usa"
+- "/movie/rubikon"
+- "/movie/saturday-fiction"
+- "/movie/sexual-drive"
+- "/movie/sharp-stick"
+- "/movie/she-said"
+- "/movie/she-will"
+- "/movie/slashback"
+- "/movie/smile-2022"
+- "/movie/sonic-the-hedgehog-2"
+- "/movie/spirit-halloween-the-movie"
+- "/movie/strawberry-mansion"
+- "/movie/summering"
+- "/movie/sundown-2021"
+- "/movie/tr"
+- "/movie/ted-k"
+- "/movie/terrifier-2"
+- "/movie/the-automat"
+- "/movie/the-aviary"
+- "/movie/the-bad-guys"
+- "/movie/the-banshees-of-inisherin"
+- "/movie/the-batman"
+- "/movie/the-black-phone"
+- "/movie/the-bobs-burgers-movie"
+- "/movie/the-burning-sea"
+- "/movie/the-contractor"
+- "/movie/the-cursed"
+- "/movie/the-desperate-hour"
+- "/movie/the-enforcer-2022"
+- "/movie/the-estate-2022"
+- "/movie/the-exorcism-of-god"
+- "/movie/the-forgiven-2021"
+- "/movie/the-friendship-game"
+- "/movie/the-good-boss"
+- "/movie/the-good-house"
+- "/movie/the-good-neighbor-2022"
+- "/movie/the-harbinger"
+- "/movie/the-immaculate-room"
+- "/movie/the-innocents-2022"
+- "/movie/the-invitation-2022"
+- "/movie/the-moon-and-the-sun"
+- "/movie/the-long-night"
+- "/movie/the-lost-city-2022"
+- "/movie/the-northman"
+- "/movie/the-outfit"
+- "/movie/the-phantom-of-the-open"
+- "/movie/the-reef-stalked"
+- "/movie/the-return-of-tanya-tucker-featuring-brandi-carlile"
+- "/movie/the-story-of-film-a-new-generation"
+- "/movie/the-tiger-rising"
+- "/movie/the-twin"
+- "/movie/the-unbearable-weight-of-massive-talent"
+- "/movie/the-woman-king"
+- "/movie/the-worst-person-in-the-world"
+- "/movie/there-are-no-saints"
+- "/movie/thor-love-and-thunder"
+- "/movie/three-minutes-a-lengthening"
+- "/movie/three-thousand-years-of-longing"
+- "/movie/ticket-to-paradise"
+- "/movie/top-gun-maverick"
+- "/movie/ultrasound"
